--- a/index.html
+++ b/index.html
@@ -5,20 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./css/globals.css">
   </head>
+
   <body>
-    <h1>Trabalho HTML/CSS/JS</h1>
+    <h1 class="text-4xl">Trabalho HTML/CSS/JS</h1>
     <button id="botao">
       Ver produtos
     </button>
 
-    <div id="produtos-container"></div>
+    <div id="produtos-container" class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"></div>
 
     <script>
       let produtos;
       $(document).ready(() => {
         // Jquery carregado
-        fetch('./data/products.json')
+        fetch('./data/products.json', {
+          method: 'GET',
+          mode: 'cors',
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        })
           .then((response) => response.json())
           .then((data) => {
             produtos = data.produtos;
@@ -27,11 +36,25 @@
 
             produtos.forEach((produto) => {
               const card = `
-                <div class="card">
-                  <h2>${produto.nome}</h2>
-                  <p>R$${produto.preco}</p>
-                  <p>${produto.quantidade}</p>
-                  <p>${produto.categoria}</p>
+                <div class="card bg-gray-100 py-2 px-3 mx-2 my-2 rounded shadow-md">
+                  <div class="flex flex-col">
+
+                    <div class="cursor-pointer">
+                      <img
+                        class="w-full h-80" 
+                        src="${produto.imagem}" 
+                        alt="${produto.nome}" 
+                      />
+                      <h1 class="text-lg font-medium mb-4">${produto.nome}</h1>
+                      <p class="text-2xl font-bold">R$${produto.preco}</p>
+                      <p>${produto.quantidade} restantes</p>
+                      <p>${produto.categoria}</p>
+                    <div>
+
+                    <button class="flex justify-center items-center w-full bg-blue-600 text-white rounded font-semibold mt-5 uppercase py-1">
+                      <h1 class="text-sm mx-1 font-bold">Adicionar ao carrinho</h1>
+                    </button>
+                  </div>
                 </div>
               `;
               container.append(card);
