--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Loja virtual</title>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./css/globals.css">
@@ -11,71 +12,17 @@
   </head>
 
   <body>
-    <header class="bg-blue-700">
-      <h1 class="text-4xl text-cyan-100">Trabalho HTML/CSS/JS</h1>
+    <!-- Cabeçalho -->
+    <header-component></header-component>
 
-      <div>
-        <ul id="navbar" class="flex flex-row gap-8 text-cyan-100">
-          <li><button id="botao"><i class="fa-brands fa-shopify"></i> Ver produtos</button></li>
-          <li><i class="fa-solid fa-phone"></i> Contato</li>
-          <li><i class="fa-solid fa-circle-info"></i> Sobre</li>
-        </ul>
-      </div>
-    </header>
-
+    <!-- Conteudo -->
     <div id="produtos-container" class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"></div>
 
-    <script>
-      let produtos;
-      $(document).ready(() => {
-        // Jquery carregado
-        fetch('./data/products.json', {
-          method: 'GET',
-          mode: 'cors',
-          headers: {
-            'Content-Type': 'application/json'
-          }
-        })
-          .then((response) => response.json())
-          .then((data) => {
-            produtos = data.produtos;
-            const container = $('#produtos-container'); 
-            console.log(produtos)
+    <!-- Rodape -->
+    <footer-component class="hidden"></footer-component>
 
-            produtos.forEach((produto) => {
-              const card = `
-                <div class="card bg-gray-100 py-2 px-3 mx-2 my-2 rounded shadow-md">
-                  <div class="flex flex-col">
-
-                    <div class="cursor-pointer">
-                      <img
-                        class="w-full h-80" 
-                        src="${produto.imagem}" 
-                        alt="${produto.nome}" 
-                      />
-                      <h1 class="text-lg font-medium mb-4">${produto.nome}</h1>
-                      <p class="text-2xl font-bold">R$${produto.preco}</p>
-                      <p>${produto.quantidade} restantes</p>
-                      <p>${produto.categoria}</p>
-                    <div>
-
-                    <button class="flex justify-center items-center w-full bg-blue-600 text-white rounded font-semibold mt-5 uppercase py-1">
-                      <h1 class="text-sm mx-1 font-bold">Adicionar ao carrinho</h1>
-                    </button>
-                  </div>
-                </div>
-              `;
-              container.append(card);
-            });
-          })
-          .catch((error) => {
-            console.log(`Erro ao carregar produtos: ${error}`)
-          })
-      })
-
-      $("#botao").click(() => {
-        alert(JSON.stringify(produtos))
-      })
-    </script>
+    <script src="./js/LoadProducts.js"></script>
+    <script src="./js/components/Header.js"></script>
+    <script src="./js/components/Footer.js"></script>
   </body>
 </html>
