--- a/carrinho.html
+++ b/carrinho.html
@@ -10,13 +10,28 @@
     <link rel="preload" href="/css/tailwind-optimized.css" as="style" onload="this.rel='stylesheet'">
     <script src="/js/EnvironmentStyles.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+    <script src="/js/Cart.js"></script>
   </head>
   <body>
     <!-- Cabeçalho -->
     <header-component></header-component>
 
     <!-- Conteudo -->
-    <h1>Página de carrinho</h1>
+    <div class="flex">
+      <div class="w-3/12">
+        Image
+      </div>
+      <div class="w-3/12">
+        Name
+      </div>
+      <div class="w-3/12">
+        Amount
+      </div>
+      <div class="w-3/12">
+        Price
+      </div>
+    </div>
 
     <!-- Rodape -->
     <footer-component></footer-component>
