--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preload" href="/css/tailwind-optimized.css" as="style" onload="this.rel='stylesheet'">
     <script src="./js/EnvironmentStyles.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
+    <script src="/js/Cart.js"></script>
   </head>
 
   <body>
