--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,7 @@
     <!-- Rodape -->
     <footer-component></footer-component>
 
-    <script src="./../js/components/Header.js"></script>
-    <script src="./../js/components/Footer.js"></script>
+    <script src="/js/components/Header.js"></script>
+    <script src="/js/components/Footer.js"></script>
   </body>
 </html>
