feature: funções de alterar quantidade e remover do carrinho

--- a/pages/produto.html
+++ b/pages/produto.html
@@ -1,5 +1,7 @@
 <!-- Conteudo -->
-<div class="container mx-auto my-6">
+<loading-spinner></loading-spinner>
+
+<div class="product-container container mx-auto my-6 hidden">
   <h1 id="product-name" class="text-gray-800 text-2xl font-semibold"></h1>
   <div class="flex">
     <div class="w-1/2 flex justify-center">
