style: alterações na página de carrinho, página inicial e produto

--- a/pages/404.html
+++ b/pages/404.html
@@ -1,3 +1,9 @@
 <!-- Conteudo -->
-<h1>Erro 404</h1>
-<p>Página não encontrada</p>
+<div class="text-center py-20">
+  <h1 class="text-8xl font-extrabold mb-4">404</h1>
+  <h2 class="text-3xl">Página não encontrada</h2>
+  <h3 class="mb-4">A página que você procura não existe ou não está disponível no momento.</h3>
+  <a href="#inicio" class="uppercase text-sm px-4 py-2 bg-blue-600 text-white hover:bg-blue-800 transition-colors rounded-lg">
+    Ir para a página inicial
+  </a>
+</div>
