--- a/pages/produto.html
+++ b/pages/produto.html
@@ -7,7 +7,7 @@
     <div class="w-1/2 flex justify-center">
       <img 
         id="product-image"
-        class="w-60 h-60"
+        class="w-1/2 h-80"
       />
     </div>
 
@@ -21,7 +21,9 @@
             <h2 id="product-price" class="text-4xl font-bold"></h2>
           </div>
           <div class="w-1/2 px-4">
-            <button class="flex justify-center items-center w-full h-full bg-blue-600 hover:bg-blue-800 transition-colors text-white rounded font-semibold uppercase py-2 px-8">
+            <button 
+              class="add-to-cart flex justify-center items-center w-full h-full bg-blue-600 hover:bg-blue-800 transition-colors text-white rounded font-semibold uppercase py-2 px-8" 
+            >
               <img src="/images/icons/cart.svg" width="25" height="25" />
               <h1 class="text-sm mx-1 font-bold">Comprar</h1>
             </button>
