feature & refactor: adaptação para mobile e refeita card de produtos

--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -1,9 +1,9 @@
 <!-- Conteudo -->
 <loading-spinner></loading-spinner>
 
-<div class="flex">
-  <div class="w-4/5 mb-4 py-2" id="container-cart-items"></div>
-  <div class="w-1/5 mb-4 py-2 text-center mx-10">
+<div class="sm:flex">
+  <div class="sm:w-4/5 mb-4 py-2" id="container-cart-items"></div>
+  <div class="sm:w-1/5 mb-4 py-2 text-center mx-10">
     <div class="border py-6">
       <h1 class="text-xl border-b-2 pb-6">Resumo</h1>
       <!-- Subtotal -->
