implementada barra de pesquisa

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -2,5 +2,6 @@
 <loading-spinner></loading-spinner>
 
 <div id="produtos-container" class="grid sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-4"></div>
+<ul id="search-result" class="grid sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-4"></ul>
 
 <script src="/js/LoadProducts.js"></script>
