--- a/pages/produto.html
+++ b/pages/produto.html
@@ -3,15 +3,15 @@
 
 <div class="product-container container mx-auto my-6 hidden">
   <h1 id="product-name" class="text-gray-800 text-2xl font-semibold"></h1>
-  <div class="flex">
-    <div class="w-1/2 flex justify-center">
+  <div class="sm:flex">
+    <div class="w-full sm:w-1/2 flex justify-center">
       <img 
         id="product-image"
-        class="w-1/2 h-80"
+        class="w-80 h-80"
       />
     </div>
 
-    <div class="w-1/2 flex items-center justify-center">
+    <div class="w-full sm:w-1/2 flex items-center justify-center">
       <div>
         <h1>Vendido e entregue por: Loja Virtual</h1>
         <h2 id="product-amount"></h2>
@@ -33,10 +33,31 @@
     </div>
   </div>
 
-  <div class="border-t-2 my-4">
+  <div class="border-t-2 my-4 px-2 sm:px-0">
     <h1 class="text-xl mt-4">Informações do produto:</h1>
     <h2 id="product-name" class="font-bold text-xl"></h2>
     <p id="product-description"></p>
+  </div>
+</div>
+
+<div id="modal" class="fixed inset-0 items-center justify-center bg-gray-800 bg-opacity-50 hidden">
+  <div class="bg-white rounded-lg p-6 w-96 shadow-lg text-center">
+    <h2 class="text-lg font-semibold text-gray-800">Item adicionado ao carrinho!</h2>
+    <p class="text-gray-600 mt-2">Seu item foi adicionado com sucesso.</p>
+    <div class="flex items-center">
+      <div class="w-1/2 text-right mr-4">
+        <a href="#carrinho">
+          <button class="mt-4 bg-blue-600 hover:bg-blue-700 text-white px-4 py-1 rounded focus:outline-none">
+            Ver carrinho
+          </button>
+        </a>
+      </div>
+      <div class="w-1/2 text-left ml-4">
+        <button id="close-modal" class="mt-4 bg-blue-600 hover:bg-blue-700 text-white px-4 py-1 rounded focus:outline-none">
+          Fechar
+        </button>
+      </div>
+    </div>
   </div>
 </div>
 
