--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,2 +1,44 @@
-<!-- Conteudo -->
-<h1>Sobre nos</h1>
+<!-- Conteúdo -->
+<div class="bg-gray-50 py-12 px-6 md:px-20">
+  <!-- Sobre a Empresa -->
+  <div class="max-w-3xl mx-auto mb-12 text-justify">
+    <h1 class="text-3xl md:text-4xl font-semibold text-blue-700 mb-4 text-center">Bem-vindo à Loja Virtual!</h1>
+    <p class="text-gray-700 leading-relaxed">
+      Desde 2024, a Loja Virtual tem o compromisso de oferecer uma experiência de compra excepcional,
+      com uma ampla variedade de produtos de alta qualidade. Nossa missão é proporcionar praticidade e conforto aos nossos
+      clientes, permitindo que você encontre tudo o que precisa com apenas alguns cliques.
+    </p>
+    <p class="text-gray-700 mt-4 leading-relaxed">
+      Trabalhamos com fornecedores selecionados para garantir que nossos produtos atendam aos mais altos padrões de qualidade e durabilidade.
+      Na Loja Virtual, valorizamos a satisfação do cliente acima de tudo. Nossa equipe de atendimento está sempre pronta para ajudar,
+      respondendo suas perguntas e garantindo que sua experiência de compra seja tranquila e prazerosa.
+    </p>
+    <p class="text-gray-700 mt-4 leading-relaxed">
+      Além disso, estamos comprometidos com a sustentabilidade. Nossos processos são projetados para minimizar o impacto ambiental, e buscamos constantemente maneiras de tornar nossa operação mais ecológica.
+    </p>
+    <p class="text-blue-700 font-semibold mt-6">
+      Agradecemos por escolher a Loja Virtual! Explore nosso site e descubra tudo o que temos a oferecer.
+      Sua próxima compra está a apenas um clique de distância!
+    </p>
+  </div>
+
+  <!-- Ícones e Informações -->
+  <div class="grid grid-cols-2 md:grid-cols-4 gap-8 max-w-4xl mx-auto text-center mt-8">
+    <div class="flex flex-col items-center">
+      <img src="/images/depositos.png" alt="Depósitos" class="w-16 h-16 mb-2">
+      <p class="text-lg font-medium text-gray-800">Mais de +1500 Depósitos</p>
+    </div>
+    <div class="flex flex-col items-center">
+      <img src="/images/frete.png" alt="Frete" class="w-16 h-16 mb-2">
+      <p class="text-lg font-medium text-gray-800">Entrega para todo o Brasil</p>
+    </div>
+    <div class="flex flex-col items-center">
+      <img src="/images/empresa.png" alt="Empresa" class="w-16 h-16 mb-2">
+      <p class="text-lg font-medium text-gray-800">+100 Empresas pelo país</p>
+    </div>
+    <div class="flex flex-col items-center">
+      <img src="/images/dinheiro.png" alt="Pagamento" class="w-16 h-16 mb-2">
+      <p class="text-lg font-medium text-gray-800">Aceitamos Pix, Cartões e Boletos</p>
+    </div>
+  </div>
+</div>
