fix: responsividade de algumas paginas e organização

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -1,8 +1,8 @@
 <!-- Conteudo -->
 <loading-spinner></loading-spinner>
 
-<div id="produtos-container" class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-4"></div>
-<ul id="search-result" class="grid sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-4"></ul>
+<div id="produtos-container" class="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-4"></div>
+<ul id="search-result" class="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-4"></ul>
 
 <div id="modal" class="fixed inset-0 items-center justify-center bg-gray-800 bg-opacity-50 hidden">
   <div class="bg-white rounded-lg p-6 w-96 shadow-lg text-center">
