--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -1,27 +1,27 @@
 <!-- Conteudo -->
 <loading-spinner></loading-spinner>
 
-<div class="sm:flex">
-  <div class="sm:w-4/5 mb-4 py-2" id="container-cart-items"></div>
-  <div class="sm:w-1/5 mb-4 py-2 text-center mx-10">
+<div class="lg:flex">
+  <div class="lg:w-4/5 mb-4 py-2" id="container-cart-items"></div>
+  <div class="lg:w-1/5 mb-4 py-2 text-center mx-10">
     <div class="border py-6">
       <h1 class="text-xl border-b-2 pb-6">Resumo</h1>
       <!-- Subtotal -->
       <div class="flex items-center mt-4 py-6">
-        <div class="w-1/2">
-          <h3 class="">Subtotal</h3>
+        <div class="w-1/3">
+          <h3 class="text-xs xl:text-sm 2xl:text-base">Subtotal</h3>
         </div>
-        <div class="w-1/2">
-          <h3 class="cart-total">R$0</h3>
+        <div class="w-2/3">
+          <h3 class="text-xs xl:text-sm 2xl:text-base cart-total">R$0</h3>
         </div>
       </div>
       <!-- Total -->
       <div class="flex items-center bg-gray-200 py-6">
-        <div class="w-1/2">
-          <h2 class="text-2xl">Total</h2>
+        <div class="w-1/3">
+          <h2 class="text-lg xl:text-xl 2xl:text-2xl">Total</h2>
         </div>
-        <div class="w-1/2">
-          <h2 class="text-2xl cart-total">R$0</h2>
+        <div class="w-2/3">
+          <h2 class="text-lg xl:text-xl 2xl:text-2xl cart-total">R$0</h2>
         </div>
       </div>
     </div>
