refactor: atualização individual no carrinho

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja Virtual // Inicio</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <title>Loja Virtual // A melhor da região</title>
 
     <link rel="stylesheet" href="/css/globals.css">
     <link rel="stylesheet" href="/css/spinner.css">
