--- a/pages/contato.html
+++ b/pages/contato.html
@@ -1,2 +1,56 @@
 <!-- Conteudo -->
-<h1>Página de contato</h1>
+<div class="bg-gray-50 py-12 px-6 md:px-20">
+  <div class="max-w-3xl mx-auto text-center mb-12">
+    <h1 class="text-3xl md:text-4xl font-semibold text-blue-700 mb-4">Entre em Contato Conosco</h1>
+    <p class="text-gray-700 leading-relaxed">
+      Ficaremos felizes em ajudar! Preencha o formulário abaixo ou entre em contato através de nossas redes sociais.
+      Nossa equipe está pronta para responder suas perguntas e garantir que sua experiência seja a melhor possível.
+    </p>
+  </div>
+
+  <div class="max-w-2xl mx-auto bg-white p-8 shadow-lg rounded-lg">
+    <form action="#" method="POST">
+      <div class="mb-4">
+        <label for="name" class="block text-gray-700 font-medium">Nome</label>
+        <input type="text" id="name" name="name" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:border-blue-500" placeholder="Seu nome">
+      </div>
+      <div class="mb-4">
+        <label for="email" class="block text-gray-700 font-medium">Email</label>
+        <input type="email" id="email" name="email" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:border-blue-500" placeholder="Seu email">
+      </div>
+      <div class="mb-4">
+        <label for="message" class="block text-gray-700 font-medium">Mensagem</label>
+        <textarea id="message" name="message" rows="4" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:border-blue-500" placeholder="Sua mensagem"></textarea>
+      </div>
+      <div class="text-center">
+        <button type="submit" class="bg-blue-700 text-white px-6 py-2 rounded-full hover:bg-blue-800 transition-colors">
+          Enviar Mensagem
+        </button>
+      </div>
+    </form>
+  </div>
+
+  <div class="flex flex-col items-center mt-12">
+    <p class="text-gray-700 text-center mb-4">Ou nos encontre nas redes sociais:</p>
+    <div class="flex space-x-6">
+      <a href="https://wa.me/558999794220" target="_blank" class="text-blue-700 hover:text-blue-900 transition-colors">
+        <img src="/images/icons/whatsapp.svg" alt="WhatsApp" class="w-8 h-8">
+      </a>
+      <a href="https://twitter.com" target="_blank" class="text-blue-700 hover:text-blue-900 transition-colors">
+        <img src="/images/icons/twitter.svg" alt="Twitter" class="w-8 h-8">
+      </a>
+      <a href="https://instagram.com" target="_blank" class="text-blue-700 hover:text-blue-900 transition-colors">
+        <img src="/images/icons/instagram.svg" alt="Instagram" class="w-8 h-8">
+      </a>
+    </div>
+  </div>
+
+  <div class="max-w-2xl mx-auto mt-12 text-center text-gray-700">
+    <p class="font-medium">Endereço:</p>
+    <p>Rua Exemplo, 123 - Bairro, Teresina - Piauí</p>
+    <p class="mt-4 font-medium">Telefone:</p>
+    <p>(00) 0000-0000</p>
+    <p class="mt-4 font-medium">Email:</p>
+    <p>lojavirtual@gmail.com</p>
+  </div>
+</div>
